Sistema de perfil completo: subida de foto, cropper, JWT security optimizado y correcciones frontend